# alfe_cpp

./: CMakeLists.txt  README.md
client/: client.c  client_gui.cpp  client_gui.out
inc/: alfe.hpp  server.hpp
src/: alfe.cpp  main.cpp  server.cpp
